--- a/ECommerce.ProductCatalog.Api/ECommerce.ProductCatalog.Api.csproj
+++ b/ECommerce.ProductCatalog.Api/ECommerce.ProductCatalog.Api.csproj
@@ -8,10 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ECommerce.ProductCatalog.Application\ECommerce.ProductCatalog.Application.csproj" />
+    <ProjectReference Include="..\ECommerce.ProductCatalog.Infrastructure\ECommerce.ProductCatalog.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
