--- a/ECommerce.ProductCatalog.Api/ECommerce.ProductCatalog.Api.csproj
+++ b/ECommerce.ProductCatalog.Api/ECommerce.ProductCatalog.Api.csproj
@@ -8,17 +8,19 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ECommerce.ProductCatalog.Application\ECommerce.ProductCatalog.Application.csproj" />
-    <ProjectReference Include="..\ECommerce.ProductCatalog.Infrastructure\ECommerce.ProductCatalog.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
